# basic-rag-chat

./: Makefile  README.md  pyproject.toml
src/basic_rag_chat/: __init__.py  document_processor.py  rag_chain.py  vector_store.py
tests/: test_document_processor.py  test_rag_chain.py  test_vector_store.py
