[project]
name = "basic-rag-chat"
version = "0.1.0"
description = "Chat with PDF documents using RAG. Upload PDFs, chunk, embed, and query with source citations."
license = {text = "MIT"}
authors = [{name = "Marlon Barreto", email = "mbarretot@hotmail.com"}]
keywords = ["RAG", "LLM", "AI", "PDF"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.6.0",
    "openai>=1.60.0",
    "pypdf>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.18",
]

[project.urls]
Homepage = "https://github.com/marlonbarreto-git/basic-rag-chat"
Repository = "https://github.com/marlonbarreto-git/basic-rag-chat"
Issues = "https://github.com/marlonbarreto-git/basic-rag-chat/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/basic_rag_chat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
